[gd_scene load_steps=9 format=3 uid="uid://b8v5jp6v8551b"]

[ext_resource type="Script" path="res://main/main.gd" id="1_q3nyg"]
[ext_resource type="PackedScene" uid="uid://o55h2l7ly30l" path="res://title_scene/form_title_menu.tscn" id="2_b8bq3"]
[ext_resource type="PackedScene" uid="uid://c48bgqh0ji5lo" path="res://save_system/form_save_and_load.tscn" id="2_hsek0"]
[ext_resource type="PackedScene" uid="uid://u6o6gbykfrik" path="res://scenes/tilemap_test.tscn" id="5_jrd3t"]
[ext_resource type="PackedScene" uid="uid://dr56ap4o7kd76" path="res://scenes/godot_icon.tscn" id="6_20dqw"]
[ext_resource type="PackedScene" uid="uid://hp54yetq0he4" path="res://scenes/cake.tscn" id="6_m518r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kk1k"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4s0i8"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3nyg")
metadata/_edit_lock_ = true

[node name="gui" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Button_save" type="Button" parent="gui"]
offset_right = 68.0
offset_bottom = 31.0
text = "Save"

[node name="Button_load" type="Button" parent="gui"]
offset_top = 35.0
offset_right = 68.0
offset_bottom = 66.0
text = "Load"

[node name="form_title_menu" parent="gui" instance=ExtResource("2_b8bq3")]
visible = false

[node name="form_save_and_load" parent="gui" instance=ExtResource("2_hsek0")]
visible = false

[node name="debug" type="RichTextLabel" parent="gui"]
visible = false
offset_left = 104.0
offset_top = 29.0
offset_right = 404.0
offset_bottom = 170.0
theme_override_styles/focus = SubResource("StyleBoxFlat_5kk1k")
theme_override_styles/normal = SubResource("StyleBoxFlat_4s0i8")

[node name="scenes" type="Node2D" parent="."]

[node name="test" parent="scenes" instance=ExtResource("5_jrd3t")]

[node name="cake" parent="scenes" instance=ExtResource("6_m518r")]
position = Vector2(122, 72)

[node name="cake2" parent="scenes" instance=ExtResource("6_m518r")]
position = Vector2(438, 40)
obj_name = "cake 2"

[node name="cake3" parent="scenes" instance=ExtResource("6_m518r")]
position = Vector2(84, 201)
obj_name = "cake 3"

[node name="cake4" parent="scenes" instance=ExtResource("6_m518r")]
position = Vector2(169, 394)
obj_name = "cake 4"

[node name="cake5" parent="scenes" instance=ExtResource("6_m518r")]
position = Vector2(475, 469)
obj_name = "cake 5"

[node name="cake6" parent="scenes" instance=ExtResource("6_m518r")]
position = Vector2(394, 394)
obj_name = "cake 6"

[node name="God" parent="scenes" instance=ExtResource("6_20dqw")]
position = Vector2(343, 126)
obj_name = "player"

[connection signal="pressed" from="gui/Button_save" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="gui/Button_load" to="." method="_on_button_load_pressed"]
[connection signal="continue_game" from="gui/form_title_menu" to="." method="_on_form_title_menu_continue_game"]
[connection signal="exit_game" from="gui/form_title_menu" to="." method="_on_form_title_menu_exit_game"]
[connection signal="new_game" from="gui/form_title_menu" to="." method="_on_form_title_menu_new_game"]
[connection signal="load_game_btn_pressed" from="gui/form_save_and_load" to="." method="_on_form_save_and_load_load_game_btn_pressed"]
[connection signal="save_game_btn_pressed" from="gui/form_save_and_load" to="." method="_on_form_save_and_load_save_game_btn_pressed"]
[connection signal="visibility_changed" from="gui/form_save_and_load" to="." method="_on_form_save_and_load_visibility_changed"]
